<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".server_order_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

            <TextView
                android:padding="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@color/yellow"
                android:text="@string/sol1"
                android:textSize="20sp"
                android:id="@+id/shop_name"
                android:layout_height="match_parent" />
            <TextView
                android:padding="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:background="@color/gray"
                android:text="@string/sol2"
                android:id="@+id/shop_setting"
                android:textSize="20sp"
                android:layout_height="match_parent" />
            <TextView
                android:padding="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:background="@color/green"
                android:text="@string/sol3"
                android:id="@+id/user_menu"
                android:textSize="20sp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
